test/e2e/testdata/load_balancing_backend_utilization.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-utilization
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend-utilization
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-low-util
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-utilization
    util: low
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-backend-utilization
      util: low
  template:
    metadata:
      labels:
        app: lb-backend-utilization
        util: low
    spec:
      containers:
      - name: backend
        image: envoyproxy/gateway-backend-utilization:latest
        imagePullPolicy: IfNotPresent
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: lb-backend-utilization
        - name: ORCA_CPU_UTILIZATION
          value: "0.1"
        resources:
          requests:
            cpu: 10m
        readinessProbe:
          httpGet:
            path: /
            port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-high-util
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-utilization
    util: high
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-backend-utilization
      util: high
  template:
    metadata:
      labels:
        app: lb-backend-utilization
        util: high
    spec:
      containers:
      - name: backend
        image: envoyproxy/gateway-backend-utilization:latest
        imagePullPolicy: IfNotPresent
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: lb-backend-utilization
        - name: ORCA_CPU_UTILIZATION
          value: "0.9"
        resources:
          requests:
            cpu: 10m
        readinessProbe:
          httpGet:
            path: /
            port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-utilization-lb-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend-utilization-lb-route
  loadBalancer:
    type: BackendUtilization
    backendUtilization:
      blackoutPeriod: 1ms
      weightUpdatePeriod: 100ms
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-utilization-lb-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /backend-utilization
    backendRefs:
    - name: lb-backend-utilization
      port: 8080
